Bot is active and responding

--- a/Project/src/main/resources/application.properties
+++ b/Project/src/main/resources/application.properties
@@ -5,3 +5,5 @@ spring.datasource.url=jdbc:mysql://localhost:3306/book_database?useSSL=false&ser
 spring.datasource.username=user
 spring.datasource.password=hbstudent
 
+bot.username=BookManagerProjectBot
+bot.token=5905839942:AAH8z_9UsYcUljR29gMAlYxJuejJ89DI3gw
