--- a/Project/src/main/resources/application.properties
+++ b/Project/src/main/resources/application.properties
@@ -2,8 +2,8 @@
 # JDBC properties
 #
 spring.datasource.url=jdbc:mysql://localhost:3306/book_database?useSSL=false&serverTimezone=UTC
-spring.datasource.username=user
-spring.datasource.password=hbstudent
+spring.datasource.username=admin
+spring.datasource.password=admin
 
 bot.username=BookManagerProjectBot
 bot.token=5905839942:AAH8z_9UsYcUljR29gMAlYxJuejJ89DI3gw
