--- a/Project/src/main/resources/application.properties
+++ b/Project/src/main/resources/application.properties
@@ -4,6 +4,8 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/book_database?useSSL=false&serverTimezone=UTC
 spring.datasource.username=admin
 spring.datasource.password=admin
+spring.devtools.restart.enabled=false
+
 
 bot.username=BookManagerProjectBot
 bot.token=5905839942:AAH8z_9UsYcUljR29gMAlYxJuejJ89DI3gw
